Update and rename Product-detail.html to product-detail.html

--- a/product-detail.html
+++ b/product-detail.html
@@ -433,8 +433,8 @@
         <nav class="navbar">
             <a href="Index.html" class="logo">Auréa & Co</a>
             <ul class="nav-links">
-                <li><a href="Index.html#home">Home</a></li>
-                <li><a href="Index.html#products">Products</a></li>
+                <li><a href="index.html#home">Home</a></li>
+                <li><a href="index.html#products">Products</a></li>
                 <li><a href="Kontak.html">Contact</a></li>
                 <li><a href="Checkout.html">Cart <span class="cart-counter">0</span></a></li>
             </ul>
@@ -722,3 +722,4 @@
     </script>
 </body>
 </html>
+
