--- a/Checkout.html
+++ b/Checkout.html
@@ -310,7 +310,7 @@
                 <p style="margin-top: 1rem;">
                     <i class="fas fa-envelope"></i> Konfirmasi pesanan telah dikirim ke email Anda.
                 </p>
-                <a href="Index.html" class="cta-button" style="display: inline-block; margin-top: 1rem;">
+                <a href="index.html" class="cta-button" style="display: inline-block; margin-top: 1rem;">
                     <i class="fas fa-home"></i> Kembali ke Beranda
                 </a>
             </div>
@@ -529,5 +529,6 @@
   </footer>
 </body>
 </html>
+
 
 
