--- a/Kontak.html
+++ b/Kontak.html
@@ -12,7 +12,7 @@
     <!-- Header Navigation -->
     <header>
         <nav class="navbar">
-            <a href="Index.html" class="logo">Auréa & Co</a>
+            <a href="index.html" class="logo">Auréa & Co</a>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="index.html#products">Products</a></li>
@@ -131,4 +131,5 @@
     </footer>
 </body>
 </html>
+
 
